--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "node-sass": "^4.11.0",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
+    "webpack": "^4.29.6",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^7.4.3",
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "~7.3.4",
     "@angular/compiler-cli": "^7.2.8",
