Trying to get cloppie to cooperate

--- a/package.json
+++ b/package.json
@@ -40,15 +40,21 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.5",
+    "croppie": "^2.6.3",
     "electron-reload": "^1.4.0",
     "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
+    "image-size": "^0.7.2",
+    "ng-lazyload-image": "^5.0.0",
     "ngx-bootstrap": "^3.2.0",
+    "ngx-croppie": "^3.0.0",
     "ngx-electron": "^2.1.1",
     "ngx-perfect-scrollbar": "^7.2.1",
     "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
+    "wait-on": "^3.2.0",
     "webpack": "^4.29.6",
     "zone.js": "^0.8.29"
   },
