--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/croppie/croppie.css"
+              "node_modules/angular2-draggable/css/resizable.min.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true,
