--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@coreui/coreui": "^2.1.7",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
+    "angular2-draggable": "^2.2.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.5",
@@ -47,7 +48,6 @@
     "image-size": "^0.7.2",
     "ng-lazyload-image": "^5.0.0",
     "ngx-bootstrap": "^3.2.0",
-    "ngx-croppie": "^3.0.0",
     "ngx-electron": "^2.1.1",
     "ngx-perfect-scrollbar": "^7.2.1",
     "node-sass": "^4.11.0",
