Cropper.js not properly working

--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@coreui/coreui": "^2.1.7",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
-    "angular2-draggable": "^2.2.2",
+    "@types/cropperjs": "^1.1.5",
+    "angular-cropperjs": "^1.0.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.5",
+    "cropperjs": "^1.5.1",
     "croppie": "^2.6.3",
     "electron-reload": "^1.4.0",
     "flag-icon-css": "^3.2.1",
