--- a/package.json
+++ b/package.json
@@ -38,12 +38,10 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
     "@types/cropperjs": "^1.1.5",
-    "angular-cropperjs": "^1.0.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.6.5",
     "cropperjs": "^1.5.1",
-    "croppie": "^2.6.3",
     "electron-reload": "^1.4.0",
     "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
@@ -54,6 +52,7 @@
     "ngx-perfect-scrollbar": "^7.2.1",
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5",
+    "resize-img": "^1.1.2",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "wait-on": "^3.2.0",
@@ -71,6 +70,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "electron": "^4.0.7",
+    "electron-builder": "^20.39.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
