--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "ngx-bootstrap": "^3.2.0",
     "ngx-electron": "^2.1.1",
     "ngx-perfect-scrollbar": "^7.2.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "resize-img": "^1.1.2",
     "rxjs": "^6.4.0",
@@ -62,7 +62,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^7.4.3",
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "~7.3.4",
     "@angular/compiler-cli": "^7.2.8",
     "@angular/language-service": "^7.2.8",
@@ -71,7 +71,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "electron": "^4.0.7",
-    "electron-builder": "^20.39.0",
+    "electron-builder": "^20.40.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
